[project]
name = "seed-vc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "descript-audio-codec==1.0.0",
    "einops==0.8.0",
    "freesimplegui==5.1.1",
    "funasr==1.1.5",
    "gradio==5.23.0",
    "huggingface-hub>=0.28.1",
    "hydra-core==1.3.2",
    "jiwer==3.0.3",
    "librosa==0.10.2",
    "modelscope==1.18.1",
    "munch==4.0.0",
    "numpy==1.26.4",
    "pydub==0.25.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "resemblyzer>=0.1.4",
    "scipy==1.13.1",
    "sounddevice==0.5.0",
    "soundfile==0.12.1",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers==4.46.3",
]



[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
# Set explicit = true for the PyTorch index as well.
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch" }
"torchvision" = { index = "pytorch" }
"torchaudio" = { index = "pytorch" }


[tool.ruff]
lint.ignore = ["E402"]
